force-app/main/default/objects/WorkOrder/fields/Actual_Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Installed_Date__c</fullName>
    <label>Actual Installed Date</label>
    <type>Date</type>
</CustomField>