force-app/main/default/objects/WorkOrder/fields/Plan_Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Installed_Date__c</fullName>
    <label>Plan Installed Date</label>
    <type>Date</type>
</CustomField>