force-app/main/default/objects/WorkOrder/fields/Server_Lift_Model__c.field-meta.xml
<CustomField>
    <fullName>Server_Lift_Model__c</fullName>
    <label>Server Lift Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>