force-app/main/default/objects/WorkOrder/fields/Technician1__c.field-meta.xml
<CustomField>
    <fullName>Technician1__c</fullName>
    <label>Technician 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>