force-app/main/default/objects/WorkOrder/fields/Technician2__c.field-meta.xml
<CustomField>
    <fullName>Technician2__c</fullName>
    <label>Technician 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>