force-app/main/default/objects/WorkOrder/recordTypes/Installation.recordType-meta.xml
<RecordType>
    <fullName>Installation</fullName>
    <active>true</active>
    <description>Work order to perform installation</description>
    <label>Installation</label>
</RecordType>